src/user.css
/* ... */
.artist-artistOffers-item:hover {
  background-color: rgba(var(--spice-rgb-selected-row), 0.05) !important;
}

.artist-artistOffers-item:active {
  background-color: rgba(var(--spice-rgb-selected-row), 0.1) !important;
}

.main-entityHeader-background,
.main-entityHeader-background.main-entityHeader-gradient {
  transform: scale(1) !important;
  margin-top: 48px;
}

[class='main-entityHeader-backgroundColor'] {
  opacity: min(calc(var(--filter-brightness) + 0.4), 1);
}

.main-entityHeader-container {
  background-image: linear-gradient(to bottom, rgb(255 255 255 / 0%), var(--spice-main));
}

.main-entityHeader-metaDataText,
.main-entityTitle-subtitle,
.main-entityHeader-metaDataText span {
  color: var(--spice-text) !important;
}

/* podcasts */

._q93agegdE655O5zPz6l,
.z7Yl7CIT1AB0y91f_moh,
.UyzJidwrGk3awngSGIwv,
.poz9gZKE7xqFwgk231J4,
.xWm_uA0Co4SXVxaO7wlB {
  color: var(--spice-subtext);
}

.show-trailer-container,
.show-episodeBlock-episodeBlock,
.show-show-episodes > :last-child {
  border-radius: var(--border-radius-1) !important;
}

.show-episodeBlock-episodeBlock:hover {
  background-color: rgba(var(--spice-rgb-selected-row), 0.05);
}

.show-episodeBlock-episodeBlock:active {
  background-color: rgba(var(--spice-rgb-selected-row), 0.1);
}

.show-show-episodes > :last-child {
  padding: 8px 24px;
}

.show-trailer-container,
.show-show-episodes > :last-child {
  background-color: var(--spice-card) !important;
}

/* top bar */

.main-topBar-button,
.IAyWaeDamLJLjxuPeVKw,
.main-userWidget-box {
  background-color: var(--spice-selected-row) !important;
  width: 28px !important;
  height: 28px !important;
  padding: 0;
}

.Fxnb0xe6bL7I7W8V0p6C,
.Root__top-bar .main-avatar-avatar,
.Root__top-bar .main-avatar-avatar div {
  width: 28px !important;
  height: 28px !important;
}

.pEG0W4wkbkrOYURhz82H {
  margin: 0;
}

.main-entityHeader-topbarTitle,
.main-topBar-topbarTitle {
  font-size: 1.4rem;
  font-weight: 700;
  padding-left: 10px;
}

.main-playButton-PlayButton {
  transition: opacity 0.5s, visibility 0.5s !important;
}

.main-playButton-PlayButton.main-playButton-primary {
  padding: 12px;
  padding-bottom: 0px;
  padding-top: 0px;
  height: auto;
}

.main-topBar-topbarContent > .main-playButton-PlayButton.main-playButton-primary {
  margin-top: 10px;
}

/* tab bars */

a[class*='-tabBar-active'] {
  background-color: rgba(var(--spice-rgb-selected-row), 1) !important;
}

a[class*='-tabBar-headerItemLink']:hover {
  background-color: rgba(var(--spice-rgb-selected-row), 0.3);
}

a[class*='-tabBar-headerItemLink']:active {
  background-color: rgba(var(--spice-rgb-selected-row), 0.5);
}

/* search */

.main-topBar-searchBar {
  flex: 0 1 400px;
}

.x-searchInput-searchInputInput,
.G9iUss4eOSpJyn2VBzsS {
  background-color: rgba(var(--spice-rgb-card), 0.65);
  color: var(--spice-text) !important;
  border: 1px solid var(--spice-light-border);
  border-radius: var(--border-radius-2) !important;
  padding-right: 72px;
  padding-left: 12px;
  transition: background-color ease-in 167ms;
}

.x-searchInput-searchInputInput:focus,
.G9iUss4eOSpJyn2VBzsS:focus {
  background-color: rgba(var(--spice-rgb-main), 0.75);
  border-bottom: var(--spice-accent) solid 2px;
}

.x-searchInput-searchInputIconContainer {
  flex-direction: row-reverse;
}

.x-searchInput-searchInputSearchIcon {
  -webkit-mask-image: url('https://cdn.jsdelivr.net/gh/nimsandu/spicetify-bloom@master/assets/fluentui-system-icons/ic_fluent_search_16_regular.svg');
  background-color: var(--spice-subtext) !important;
  flex: 0;
  transform: scaleX(-1);
  height: 16px;
  width: 16px;
}

.x-searchInput-searchInputSearchIcon path {
  display: none;
}

.x-searchInput-searchInputClearButton {
  margin-left: 5px;
  margin-right: 12px;
}

.x-searchInput-searchInputClearButton path,
.g7ggq46CbOli19ZxJlQe .BDcKgSW_ys9_Hj2DwDBW path {
  display: block !important;
  stroke: var(--spice-subtext) !important;
  stroke-width: 1.3px;
}

.x-searchInput-searchInputClearButton svg,
.g7ggq46CbOli19ZxJlQe .BDcKgSW_ys9_Hj2DwDBW svg {
  padding: 3px;
}

.x-searchInput-searchInputSearchIcon,
.playlist-inlineSearchBox-searchIcon,
.x-searchInput-searchInputInput::placeholder,
.playlist-inlineSearchBox-filterInput,
.x-searchInput-searchInputClearButton {
  color: var(--spice-text) !important;
}

.x-searchResultsTracks-root .main-gridContainer-gridContainer {
  padding: 8px;
}

.main-heroCard-card,
.x-searchResultsTracks-root .main-gridContainer-gridContainer {
  background-color: var(--spice-card);
  border-radius: var(--border-radius-1);
}

/* error */

path[d='M23 0C10.298 0 0 10.297 0 23c0 12.702 10.298 23 23 23 12.703 0 23-10.298 23-23C46 10.297 35.703 0 23 0zm0 44C11.421 44 2 34.579 2 23S11.42 2 23 2c11.579 0 21 9.42 21 21 0 11.579-9.42 21-21 21zm1.872-32.065l-.8 16.192h-2.144l-.832-16.192h3.776zm-3.968 20.768c0-.576.203-1.072.608-1.488a1.979 1.979 0 011.472-.624c.576 0 1.072.208 1.488.624.416.416.624.912.624 1.488s-.208 1.067-.624 1.472a2.056 2.056 0 01-1.488.608 2.006 2.006 0 01-1.472-.608 2.002 2.002 0 01-.608-1.472z'],
.spoticon-warning-64::before {
  color: var(--spice-notification-error);
}

/* notification */

.main-notificationBubbleContainer-NotificationBubbleContainer {
  margin-bottom: 110px;
}

.main-notificationBubble-NotificationBubble {
  color: var(--spice-text);
}

/* modals */

.GenericModal__overlay {
  background-color: rgba(0, 0, 0, 0.6);
}

.GenericModal {
  border-radius: var(--border-radius-1);
}

.main-trackCreditsModal-header {
  border-top-right-radius: var(--border-radius-1);
  border-top-left-radius: var(--border-radius-1);
}

.main-trackCreditsModal-container,
.main-aboutRecsModal-container,
.main-playlistEditDetailsModal-container,
.profile-userEditDetails-container,
.artist-artistAbout-modal {
  background-color: rgba(var(--spice-rgb-main), 0.8) !important;
  backdrop-filter: blur(50px);
  border-radius: var(--border-radius-1) !important;
}

.uJjmxe0T11dUVeW6Biz8 {
  background-color: unset;
}
/* ... */

